--- a/FlightControlWeb/app.config
+++ b/FlightControlWeb/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name = "Default" connectionString="Data Source= .\DemoDB.db;Version=3;" providerName="System.Data.SqlClient"/>"/>
+    <add name = "Default" connectionString="Data Source= .\DemoDB.db;Version=3;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!-- To customize the asp.net core module uncomment and edit the following section. 
   For more info see https://go.microsoft.com/fwlink/?linkid=838655 -->
